--- a/src/main/webapp/WEB-INF/views/fragments/footer.jspf
+++ b/src/main/webapp/WEB-INF/views/fragments/footer.jspf
@@ -6,7 +6,7 @@
   To change this template use File | Settings | File Templates.
 --%>
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<footer class="page-footer font-small py-3">
+<footer class="page-footer font-small fixed-bottom">
     <div class="footer-copyright text-light text-center py-3">&copy; 2019 Copyright:
         <a href="#" role="none">Tomasz Hein</a>
     </div>
