Updated header - added link to login page

--- a/src/main/webapp/WEB-INF/views/fragments/header.jspf
+++ b/src/main/webapp/WEB-INF/views/fragments/header.jspf
@@ -15,6 +15,7 @@
     <div class="collapse navbar-collapse">
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="<c:url value="/home/"/>"><i class="fa fa-home"></i> Home</a>
+            <a class="nav-item nav-link" href="<c:url value="/login"/>"><i class="fa fa-key"></i> Login</a>
         </div>
         <button class="getRandomJoke nav-item nav-link btn-warning"><i class="fa fa-smile-o"></i> Random joke</button>
     </div>
