--- a/src/main/webapp/resources/static/css/style.css
+++ b/src/main/webapp/resources/static/css/style.css
@@ -12,10 +12,15 @@ body {
     background-size: cover;
 }
 
-div.addNotice, div.categories {
+div.addNotice, div.categories, div.messages {
     position: fixed;
 }
 
 div.categories {
     margin-top: 80px;
+}
+
+div.messages {
+    margin-top: 250px;
+    border: solid;
 }
